--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jshint-loader": "^0.8.4",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.1.1"
+    "webpack-dev-server": "^4.1.1",
+    "strip-loader": "^0.1.2"
   }
+  
 }
